Fix Nav and Footer spacing issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,13 @@
 @font-face {
     font-family: 'Young Heart';
-    src: url('static/fonts/YoungHeart.woff2') format('woff2'),
-        url('static/fonts/YoungHeart.woff') format('woff'),
-        url('static/fonts/YoungHeart.ttf') format('truetype');
+    src: url('/static/fonts/YoungHeart.woff2') format('woff2'),
+        url('/static/fonts/YoungHeart.woff') format('woff'),
+        url('/static/fonts/YoungHeart.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
+
 body {
     min-width: 260px;
     background-color: #E0CA3C;
@@ -45,7 +46,7 @@ nav {
   color: #FFF;
   font-size: 6rem;
   position: relative;
-  top: 5px;
+  bottom: 7px;
 }
 
 .custom-nav-links {
@@ -71,6 +72,7 @@ nav {
 .footer-links {
     color: #FFF;
     font-size: 2rem;
+    text-align: center;
 }
 
 .copyright {
@@ -91,6 +93,7 @@ nav {
     padding-top: 75%;
     position: relative
 }
+
 .recipe-card img {
     position: absolute;
     top: 0;
@@ -153,6 +156,7 @@ nav {
     height: 80vh;
     min-height: 450px;
 }
+
 .about-row {
     background-color: #F34213;
 }
@@ -214,6 +218,10 @@ nav {
     .about-blurb {
         font-size: 0.8rem;
     }
+    .footer-links{
+        font-size: 1.5rem;
+        text-align: center;
+    }
 }
 
 @media screen and (min-width: 576px){
@@ -235,6 +243,9 @@ nav {
 }
 
 @media screen and (min-width: 768px){
+    #logo {
+        font-size: 5rem;
+    }
     .about-title{
         left: 30%;
         font-size: 5rem;
@@ -262,10 +273,3 @@ nav {
         min-height: 580px;
     }
 }
-/* 
-Extra small < 576px	
-Small       ≥ 576px	
-Medium      ≥ 768px	
-Large       ≥ 992px	
-Extra large ≥ 1200px 
-*/
